--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webex-chat-starter",
+  "name": "webex-v6-chat-starter",
   "description": "UI for the dCloud Cloud Configuration Toolbox",
   "version": "2021.3.3",
   "author": "Coty Condry <ccondry@cisco.com>",
@@ -29,10 +29,10 @@
   "homepage": "https://dcloud-collab-toolbox-rtp.cisco.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ccondry/webex-chat-starter"
+    "url": "https://github.com/ccondry/webex-v6-chat-starter"
   },
   "bugs": {
-    "url": "https://github.com/ccondry/webex-chat-starter/issues"
+    "url": "https://github.com/ccondry/webex-v6-chat-starter/issues"
   },
   "license": "MIT",
   "dependencies": {
